--- a/helpdesk.html
+++ b/helpdesk.html
@@ -21,7 +21,7 @@
     <p>Check Blackboard for when CWA tutors will be there.</p>
     
     <!-- form that sends through  request body to mercury.swin.edu.au when submitted -->
-    <form action="https://mercury.swin.edu.au/it000000/formtest.php" , method ="post">
+    <form action="https://mercury.swin.edu.au/it000000/formtest.php"  method ="post">
         <!--text inputs checking for student details-->
         <fieldset>
             <legend>Student Details</legend>
