changd tutor names for fun

--- a/helpdesk.html
+++ b/helpdesk.html
@@ -51,9 +51,9 @@
         <label for="tutor">Your Tutor:</label>
         <select id="tutor" name="tutor" required>
             <option value="">Please Select</option>
-            <option value="Tutor1">Tutor 1</option>
-            <option value="Tutor2">Tutor 2</option>
-            <option value="Tutor3">Tutor 3</option>
+            <option value="Tutor1">Riebeck</option>
+            <option value="Tutor2">Chert</option>
+            <option value="Tutor3">Feldspar</option>
         </select>
         <br>
 
