--- a/helpdesk.html
+++ b/helpdesk.html
@@ -86,7 +86,7 @@
         <input type="text" id="date" name="date" placeholder="dd/mm/yyyy" pattern="\d{2}/\d{2}/\d{4}">
         <br>
         <label for="time">Time:</label>
-        <input type="text" id="time" name="time" placeholder="00:00" pattern="\d{2}:\d{2}">
+        <input type="time" id="time" name="time">
         <br>
         
         <button type="submit">Book</button>
